--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ section.letter .paper{
 
     <!-- ====== Секция комплиментов ====== -->
     <section class="compliments card">
-      <div class="txt" id="compliment">Нажми на кнопку — и получишь комплимент 💌</div>
+      <div class="txt" id="compliment">Нажми на кнопку — и получишь комплимент! </div>
       <div>
         <button class="btn" id="btn-compliment">Сказать комплимент</button>
       </div>
