--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ section.letter .paper{
     <!-- ====== Галерея воспоминаний (мейсонри-решётка) ====== -->
     <section class="memories card">
       <h2 style="margin:0 0 8px">Ещё воспоминания</h2>
-      <p style="margin-top:0; color:#a0567b">Добавь сюда сколько угодно фото.</p>
+      <p style="margin-top:0; color:#a0567b">Несколько счастливых моментов вместе.</p>
       <div class="grid">
         <!-- Копируй/вставляй блоки .tile и меняй src + подпись -->
         <figure class="tile">
