--- a/index.html
+++ b/index.html
@@ -513,8 +513,8 @@ section.letter .paper{
       <img
         id="giftPhoto"
         class="gift-photo"
-        src="photos/gift-1.jpg"
-        data-next="photos/gift-2.jpg"
+        src="photos/gif1.jpg"
+        data-next="photos/gif2.jpg"
         alt="Подарочная коробка"
       />
 
